--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "source_folder": "%userprofile%\\Downloads",
+  "source_folder": "Add your destination",
   "extension_map": {
     ".jpg": "Attēli",
     ".png": "Attēli",
